package com.ecommerce_books.book_service.dto;

public record BookDTO() {
}
